--- a/claims-process.html
+++ b/claims-process.html
@@ -49,13 +49,14 @@
     <div class="row px-5 pt-4">
       <h4 class="font-weight-bold">Top 15 - Highest use of Claims process <span class="cust-small">(last 8 weeks)</span></h4>
       <div class="table-white table-responsive-sm">
-        <table class="custable js-table-data">
+        <table class="nt">
           <thead>
             <tr>
+              <th></th>
               <th class="th-md">Client name (average)</th>
               <th class="th-md">Region</th>
               <th class="th-md">Average Value</th>
-              <th class="th-md">Current outstanding</th>
+              <th class="th-md">Current<br />outstanding</th>
               <th class="th-md">Claim: Send ratio</th>
               <th class="th-md">No. Shipments</th>
               <th class="th-md">No Claims</th>
@@ -64,7 +65,8 @@
             </tr>
           </thead>
           <tr>
-            <td><i class="far fa-frown mr-2 orange-text"></i>FE Maughans (4.3)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>FE Maughans (4.3)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -75,7 +77,8 @@
             <td>3%</td>
           </tr>
           <tr>
-            <td><i class="far fa-frown mr-2 orange-text"></i>Toxic Juice (4.7)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>Toxic Juice (4.7)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -86,7 +89,8 @@
             <td>3%</td>
           </tr>
           <tr>
-            <td><i class="far fa-frown mr-2 orange-text"></i>FE Maughans (4.3)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>FE Maughans (4.3)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -97,7 +101,19 @@
             <td>3%</td>
           </tr>
           <tr>
-            <td><i class="far fa-frown mr-2 orange-text"></i>Toxic Juice (4.7)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>Toxic Juice (4.7)</td>
+            <td>North East</td>
+            <td>&#163;34.66</td>
+            <td>5 Claims - &#163;324.11</td>
+            <td>10%</td>
+            <td>100</td>
+            <td>10</td>
+            <td>25%</td>
+            <td>3%</td>
+          </tr><tr>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>FE Maughans (4.3)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -108,7 +124,8 @@
             <td>3%</td>
           </tr>
           <tr>
-            <td><i class="far fa-frown mr-2 orange-text"></i>FE Maughans (4.3)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>Toxic Juice (4.7)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -119,7 +136,8 @@
             <td>3%</td>
           </tr>
           <tr>
-            <td><i class="far fa-frown mr-2" style="color:#f04f22;"></i>Toxic Juice (4.7)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>FE Maughans (4.3)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -130,7 +148,8 @@
             <td>3%</td>
           </tr>
           <tr>
-            <td><i class="far fa-frown mr-2" style="color:#f04f22;"></i>FE Maughans (4.3)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>Toxic Juice (4.7)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -141,7 +160,8 @@
             <td>3%</td>
           </tr>
           <tr>
-            <td><i class="far fa-frown mr-2" style="color:#f04f22;"></i>Toxic Juice (4.7)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>FE Maughans (4.3)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -152,7 +172,8 @@
             <td>3%</td>
           </tr>
           <tr>
-            <td><i class="far fa-frown mr-2" style="color:#f04f22;"></i>FE Maughans (4.3)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>Toxic Juice (4.7)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -163,7 +184,20 @@
             <td>3%</td>
           </tr>
           <tr>
-            <td><i class="far fa-frown mr-2" style="color:#f04f22;"></i>Toxic Juice (4.7)</td>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>FE Maughans (4.3)</td>
+            <td>North East</td>
+            <td>&#163;34.66</td>
+            <td>5 Claims - &#163;324.11</td>
+            <td>10%</td>
+            <td>100</td>
+            <td>10</td>
+            <td>25%</td>
+            <td>3%</td>
+          </tr>
+          <tr>
+            <td><i class="far fa-frown mr-2 orange-text"></i></td>
+            <td>Toxic Juice (4.7)</td>
             <td>North East</td>
             <td>&#163;34.66</td>
             <td>5 Claims - &#163;324.11</td>
@@ -179,26 +213,6 @@
     </div>
 
   </div><!-- <div class="modal-body"> -->
-
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-
-  <script>
-    $(document).ready(function() {
-      $('.js-table-data').each(function() {
-        table = $(this);
-        tableRow = table.find('tr');
-        table.find('td').each(function() {
-          tdIndex = $(this).index();
-          if ($(tableRow).find('th').eq(tdIndex).attr('data-label')) {
-            thText = $(tableRow).find('th').eq(tdIndex).data('label');
-          } else {
-            thText = $(tableRow).find('th').eq(tdIndex).text();
-          }
-          $(this).attr('data-label', thText + ':');
-        });
-      });
-    });
-  </script>
 
 </body>
 
